# autolabor_simulation

./: README.md
autolabor_description/urdf/: autolabor_mini2.urdf
autolabor_simulation_base/: CMakeLists.txt
autolabor_simulation_base/include/autolabor_simulation_base/: simulation_base_node.h
autolabor_simulation_base/src/: simulation_base_node.cpp
autolabor_simulation_base/test/: variance.cpp
autolabor_simulation_lidar/: CMakeLists.txt
autolabor_simulation_lidar/include/autolabor_simulation_lidar/: simulation_lidar_node.h
autolabor_simulation_lidar/src/: simulation_lidar_node.cpp
autolabor_simulation_location/include/autolabor_simulation_location/: simulation_location_node.h
autolabor_simulation_location/src/: simulation_location_node.cpp
autolabor_simulation_stage/map/: MG_map.yaml
imr/: CMakeLists.txt  README.md  package.xml
imr/data/: IMR_Data_Collection_0524DAVID.xlsx  processed_data.xlsx
imr/launch/: axle_backyard.launch  fiducial.launch  perceptionbox_localization.launch  reconstruct.launch
imr/rviz/: axle_localization.rviz  fiducial.rviz  imr_localization.rviz
imr/scripts/: record.sh
imr/src/: odom_filter.cpp  path.cpp
real_launch/: CMakeLists.txt  package.xml
real_launch/launch/: joy_control.launch
real_launch/scripts/: IMR_client.zsh
simulation_launch/: CMakeLists.txt  package.xml
simulation_launch/IMR_param/: base_local_planner_params.yaml  base_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_costmap_params_backup.yaml  local_costmap_params.yaml
simulation_launch/launch/: local_planner.launch  move_base_joy_sim.launch  perceptionbox_localization.launch  real_robot_localization.launch  robot_localization.launch  slambox_robot_localization.launch  slerp.launch  teb_move_base_simulation.launch  viz_map.launch
simulation_launch/m6_param/: base_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
simulation_launch/my_param/: global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
simulation_launch/param/: move_base_params.yaml
simulation_launch/rviz/: autolabor.rviz  imr_localization.rviz  lidar_sim.rviz  localization.rviz  map.rviz  mapping.rviz  move_base.rviz  quaternion.rviz  real_localization.rviz  teb_move_base.rviz
simulation_launch/scripts/: odom_filter.py
simulation_launch/src/: odom_filter.cpp  path.cpp  slambox_odom_filter.cpp
simulation_launch/test/: slerp.cpp
simulation_launch/track_param/: teb_move_base_params.yaml
slambox/: CMakeLists.txt  package.xml
slambox/config/: map.yaml  slambox.yaml
slambox/launch/: slambox_localization.launch  slambox_robot_localization.launch
slambox/rviz/: mapping.rviz
slambox/src/: IMU.cpp
